# camdl-viewer

./: .gitignore  Makefile  README.md  app.py  batch.toml  he_measles.camdl  params.toml  plan.md  pyproject.toml
.streamlit/: config.toml
camdl_viewer/: __init__.py  aggregators.py  cas.py  ensemble.py  framing.py  observed.py  plotting.py  theme.py  ui_browser.py  ui_ensemble.py  views.py
examples/seir-vaccine/: Makefile  seir_vaccine.camdl
tests/: conftest.py  test_aggregators.py  test_cas.py  test_framing.py  test_tree.py
