[project]
name = "camdl-viewer"
version = "0.1.0"
description = "A viewer for camdl content-addressed results stores"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "plotly>=6.7.0",
    "polars>=1.41.1",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
